LIN-2875/LIN-2904 :: Fix overflowing formitem label alignment

--- a/vaadin23/core/src/main/resources/META-INF/resources/themes/linkki/components/vaadin-form-item.css
+++ b/vaadin23/core/src/main/resources/META-INF/resources/themes/linkki/components/vaadin-form-item.css
@@ -13,6 +13,7 @@
 :host(:not([label-position='top'])) #label {
     display: flex;
     justify-content: var(--linkki-form-item-label-alignment, end);
+    text-align: var(--linkki-form-item-label-alignment, end);
     position: relative;
 }
 
